fix z-index on books & about grid cards

--- a/styles/grid/AboutGrid.module.css
+++ b/styles/grid/AboutGrid.module.css
@@ -15,6 +15,7 @@
 
 .cat {
   height: 100%;
+  z-index: 1;
 }
 
 .about {
